--- a/styles.css
+++ b/styles.css
@@ -1,75 +1,152 @@
-/* Global Styles */
-body {
-    font-family: Arial, sans-serif;
+*{
     margin: 0;
     padding: 0;
-  }
-  
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 20px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  section {
-    padding: 50px 20px;
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  /* Project Section Styles */
-  .project {
-    margin-bottom: 30px;
-  }
-  
-  .project h2 {
-    color: #333;
-  }
-  
-  /* Contact Section Styles */
-  form label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  form input[type="text"],
-  form input[type="email"],
-  form textarea {
+    box-sizing: border-box;
+    
+}
+.general{
+    max-width: 60%;
+    margin: 0 auto;
+    /* background-color: yellow; */
     width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  form input[type="submit"] {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
-  
-  footer {
-    background-color: #333;
-    color: #fff;
+    font-size: 16px;
+}
+
+.veryTop{
+    /* background-color: green; */
+    max-width: 30%;
+    margin: 0 auto;
     text-align: center;
-    padding: 20px;
-  }
-  
+    padding: 15px 0;
+}
+
+.veryTop .logo{
+    max-width: 25%;
+    height: auto;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.navBar{
+    background-color: red;
+    /* color: white; */
+    /* display: flex; */
+}
+
+.navBar .navList{
+    display: flex;
+    height: 35px;
+    justify-content: flex-start;
+    align-items: center;
+    /* color: white; */
+}
+
+.navList li{
+    list-style: none;
+}
+
+.navList li a{
+    color: white;
+    text-decoration: none;
+    padding-left: 15px;
+    font-size: 15px;
+}
+
+.firstContent{
+    display: flex;
+    margin-top: 25px;
+    background-color: ghostwhite;
+    height: 300px;
+    margin-bottom: 25px;
+}
+
+.firstContent .presidentImage img{
+    max-width: 100%;
+    height: 300px;
+    
+}
+
+.firstContent .rightTexts{
+    max-width: 35%;
+    margin-left : 10px;
+}
+
+.firstContent .rightTexts .blueText{
+    font-size: 19.7px;
+    margin-top: 20px;
+    font-weight: 300;
+    font-weight: bold;
+    color: darkblue;
+}
+
+.firstContent .rightTexts p{
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.firstContent .redLine{
+    /* height: 5px; */
+    width: 100px;
+    border: 2px solid red;
+    margin-top: 5px;
+}
+
+.secondContent{
+    display: flex;
+}
+
+.secondContent .vicePresident{
+    max-width: 25%;
+    width: 100%;
+}
+
+.secondContent .vicePresident .grayBackground{
+    background-color: whitesmoke;
+    width: 75%;
+    margin-top: -4px;
+}
+.secondContent .vicePresident .grayBackground .vpName{
+    font-weight: bold;
+    font-size: 8.8px;
+    text-align: center;
+    padding-top: 6px;
+}
+.secondContent .vicePresident .grayBackground .vpTitle{
+    font-size: 8.8px;
+    text-align: center;
+    padding-top:1.5px;
+    padding-bottom: 3px;
+}
+
+.secondContent .vicePresident .vpImage{
+    max-width: 100%;
+    width: 75%;
+    height: 175px;
+}
+
+.secondContent .newsReleases {
+    padding: 5px 10px;
+}
+
+.secondContent .newsReleases .newsHeadline{
+    font-size: 20px;
+    font-weight: 550;
+}
+
+.secondContent .newsReleases .miniNews{
+    margin-top: 20px;
+}
+
+.secondContent .newsReleases .miniNews .date{
+    color: grey;
+    font-size: 12px;
+}
+
+.secondContent  .recentDocument{
+    max-width: 25%;
+    width: 100%;
+}
+
+.verticalLine{
+    border: 1px solid black;
+}
